--- a/privacy.html
+++ b/privacy.html
@@ -94,19 +94,15 @@
                 <section class="legal-section">
                     <h2 data-i18n="privacy_security_title">数据安全</h2>
                     <p data-i18n="privacy_security_content">
-                        我们采用行业标准的安全措施来保护您的个人信息，包括加密存储、安全传输协议和访问控制。
+                        由于所有数据都存储在您的设备本地，您的信息安全取决于您设备的安全设置。我们建议保持设备更新并使用适当的安全措施。
                     </p>
                 </section>
 
                 <section class="legal-section">
                     <h2 data-i18n="privacy_rights_title">您的权利</h2>
-                    <p data-i18n="privacy_rights_intro">您有权：</p>
-                    <ul>
-                        <li data-i18n="privacy_rights_access">访问您的个人信息</li>
-                        <li data-i18n="privacy_rights_correct">更正不准确的信息</li>
-                        <li data-i18n="privacy_rights_delete">请求删除您的数据</li>
-                        <li data-i18n="privacy_rights_export">导出您的数据</li>
-                    </ul>
+                    <p data-i18n="privacy_rights_content">
+                        由于我们不收集任何个人信息，传统的数据权利（访问、更正、删除）不适用。但是，您对存储在设备本地的所有数据拥有完全控制权。
+                    </p>
                 </section>
 
 
